--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="css/base.css" />
     
-    <script src="Js/starsBackground.js" defer></script>
+    <script src="js/starsBackground.js" defer></script>
 </head>
 
 <body>
@@ -27,7 +27,7 @@
         <p>Fondo con estrellas animadas.</p>
     
     <footer class="divider" id="main-footer"></footer>
-    <script type="module" src="/public/js/loadHeaderFooter.js"></script>
+    <script type="module" src="js/loadHeaderFooter.js"></script>
 </body>
 
 </html>
