almost all header fixed

--- a/pages/heroes-list.html
+++ b/pages/heroes-list.html
@@ -1,11 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Heroes</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>HN — Lista de Heroes</title>
+    <meta name="description" content="Website de Heroes de la Tormenta en español? " />
+    <meta name="author" content="Tu Nombre" />
+    <link rel="stylesheet" href="../css/base.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/icons/favicon-16x16.png">
+    <link rel="shortcut icon" href="../assets/icons/favicon.ico">
+    <link rel="manifest" href="../assets/icons/site.webmanifest">
+
 </head>
+
 <body>
-    
+
+    <canvas id="stars" aria-hidden="true"></canvas>
+
+    <header id="site-header">    </header>
+
+
+
+    <main id="main-content" tabindex="-1">
+
+        <h1>
+            Página en construcción...
+        </h1>
+    </main>
+
+
+    <footer id="site-footer"></footer>
+
+    <noscript>Este sitio usa JavaScript para cargar el encabezado y pie de página.</noscript>
+
+
+
+    <script type="module" src="../js/main.js"></script>
 </body>
+
 </html>
