--- a/pages/login.html
+++ b/pages/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>HN — Detalles de Heroes</title>
+    <title>HN — Tu cuenta</title>
     <meta name="description" content="Website de Heroes de la Tormenta en español? " />
     <meta name="author" content="Tu Nombre" />
     <link rel="stylesheet" href="../css/base.css" />
@@ -20,7 +20,7 @@
 
     <canvas id="stars" aria-hidden="true"></canvas>
 
-    <header id="site-header">    </header>
+    <header id="site-header"> </header>
 
 
 
