--- a/index.html
+++ b/index.html
@@ -7,40 +7,23 @@
     <meta name="description" content="Website de Heroes de la Tormenta en español? " />
     <meta name="author" content="Tu Nombre" />
     <link rel="stylesheet" href="css/base.css" />
+<link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
+<link rel="shortcut icon" href="assets/icons/favicon.ico">
+<link rel="manifest" href="assets/icons/site.webmanifest">
+
 </head>
 
 <body>
     
     <canvas id="stars" aria-hidden="true"></canvas>
 
-<header id="site-header">
-    <div class="header-container">
-        <!-- Logo -->
-        <a href="index.html" class="logo">Sitio de Héroes</a>
+<header id="site-header">  </header>
 
-        <!-- Navegación principal -->
-        <nav id="main-nav" class="nav" aria-label="Navegación principal">
-            <ul>
-                <li><a href="index.html" aria-current="page">Inicio</a></li>
-                <li><a href="pages/heroes-list.html">Héroes</a></li>
-                <li><a href="pages/heroes-details.html">Detalles</a></li>
-                <li><a href="pages/heroes-stats.html">Estadísticas</a></li>
-            </ul>
-        </nav>
 
-        <!-- Enlace externo -->
-        <div class="header-actions">
-            <a href="https://heroesofthestorm.blizzard.com/es-mx/" target="_blank" rel="noopener noreferrer"
-                class="external-link">
-                Sitio Oficial ↗
-            </a>
-            <!-- Espacio futuro para login -->
-            <!-- <a href="pages/login.html" class="btn-login">Iniciar sesión</a> -->
-        </div>
-    </div>
-</header>
 
-    <main id="main-content" tabindex="-1">
+    <main  >
         <h1>Bienvenido</h1>
         <p>Fondo con estrellas animadas y navegación por héroes.</p>
         <p><a href="pages/heroes-list.html">Ir a la lista de héroes →</a></p>
