--- a/pages/heroes-list.html
+++ b/pages/heroes-list.html
@@ -13,6 +13,9 @@
     <link rel="icon" type="image/png" sizes="16x16" href="../assets/icons/favicon-16x16.png">
     <link rel="shortcut icon" href="../assets/icons/favicon.ico">
     <link rel="manifest" href="../assets/icons/site.webmanifest">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;600;700&family=Work+Sans:wght@400;600;700&display=swap"
+        rel="stylesheet">
 
 </head>
 
