--- a/pages/heroes-list.html
+++ b/pages/heroes-list.html
@@ -167,7 +167,7 @@
     <!-- Global init (stars, header/footer inject, etc.) -->
     <script type="module" src="../js/main.js"></script>
     <!-- Page module (heroes list UI) -->
-    <script type="module" src="/js/features/heroes-list.js"></script>
+    <script type="module" src="../js/features/heroes-list.js"></script>
 </body>
 
 </html>
