update to netify

--- a/pages/heroes-list.html
+++ b/pages/heroes-list.html
@@ -155,9 +155,8 @@
 
     <footer id="site-footer"></footer>
 
-    <!-- Global init (stars, header/footer inject, etc.) -->
+    <script src="../js/config.local.js"></script>
     <script type="module" src="../js/main.js"></script>
-    <!-- Page module (heroes list UI) -->
     <script type="module" src="../js/features/heroes-list.js"></script>
 </body>
 
