heroes detail wuth banner

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Sitio de Héroes — Inicio</title>
-    <meta name="description" content="Website de Heroes de la Tormenta en español? " />
-    <meta name="author" content="Tu Nombre" />
+    <meta name="description" content="Website de Heroes de la Tormenta en español " />
+    <meta name="author" content="Dart" />
     <link rel="stylesheet" href="css/base.css" />
 <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
