--- a/pages/heroes-list.html
+++ b/pages/heroes-list.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>HN — Lista de Héroes</title>
     <meta name="description" content="Website de Heroes de la Tormenta en español" />
-    <meta name="author" content="Tu Nombre" />
+    <meta name="author" content="Dart" />
     <link rel="stylesheet" href="../css/base.css" />
     <link rel="stylesheet" href="../css/pages/heroes-list-desktop.css" />
 
