fix meta data test 1

--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
 <link rel="icon" type="image/png" sizes="16x16" href="assets/icons/favicon-16x16.png">
 <link rel="shortcut icon" href="assets/icons/favicon.ico">
 <link rel="manifest" href="assets/icons/site.webmanifest">
+<meta property="og:type" content="website">
+<meta property="og:title" content="HN — Página de Inicio">
+<meta property="og:description" content="Website de Heroes de la Tormenta en español">
+<meta property="og:url" content="https://heroesdelnexo.netlify.app">
+<meta property="og:image" content="https://heroesdelnexo.netlify.app/assets/img/insignia-webp.webp">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+
+<link rel="canonical" href="https://heroesdelnexo.netlify.app">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="HN — Lista de Héroes">
+<meta name="twitter:description" content="Website de Heroes de la Tormenta en español">
+<meta name="twitter:image" content="https://heroesdelnexo.netlify.app/assets/img/insignia-webp.webp">
+
 <link
     href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;600;700&family=Work+Sans:wght@400;600;700&display=swap"
     rel="stylesheet">
@@ -25,7 +40,8 @@
     
     <canvas id="stars" aria-hidden="true"></canvas>
 
-<header id="site-header">  </header>
+<header id="site-header">  </header> 
+
 
 
 
@@ -33,6 +49,8 @@
         <h1>Bienvenido</h1>
         <p>Fondo con estrellas animadas y navegación por héroes.</p>
         <p><a href="pages/heroes-list.html">Ir a la lista de héroes →</a></p>
+
+
     </main>
 
 
