--- a/pages/heroes-list.html
+++ b/pages/heroes-list.html
@@ -16,7 +16,22 @@
     <link rel="shortcut icon" href="../assets/icons/favicon.ico">
     <link rel="manifest" href="../assets/icons/site.webmanifest">
 
-    <!-- Fonts -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="HN — Lista de Héroes">
+    <meta property="og:description" content="Website de Heroes de la Tormenta en español">
+    <meta property="og:url" content="https://heroesdelnexo.netlify.app/pages/heroes-list">
+    <meta property="og:image" content="https://heroesdelnexo.netlify.app/assets/img/insignia-webp.webp">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    
+    <link rel="canonical" href="https://heroesdelnexo.netlify.app/pages/heroes-list">
+    
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="HN — Lista de Héroes">
+    <meta name="twitter:description" content="Website de Heroes de la Tormenta en español">
+    <meta name="twitter:image" content="https://heroesdelnexo.netlify.app/assets/img/insignia-webp.webp">
+
+
     <link
         href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;600;700&family=Work+Sans:wght@400;600;700&display=swap"
         rel="stylesheet">
