--- a/pages/heroes-details.html
+++ b/pages/heroes-details.html
@@ -20,6 +20,21 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;600;700&family=Work+Sans:wght@400;600;700&display=swap"
         rel="stylesheet">
+        <script src="/js/config.prod.js"></script>
+        <script>
+            (function () {
+                const path = '/js/config.local.js';
+                fetch(path, { method: 'HEAD' })
+                    .then(r => {
+                        if (r.ok) {
+                            const s = document.createElement('script');
+                            s.src = path;
+                            document.head.appendChild(s);
+                        }
+                    })
+                    .catch(() => { });
+            })();
+        </script>
 </head>
 
 <body>
